fix(waybar): work_time missing margin

--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -155,4 +155,5 @@
   color: #ef9f76;
   padding: 0rem 1rem;
   border-radius: 5px;
+  margin-left: 1rem;
 }
